Istio/gateWay.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: platform-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - draw.kushan23.com
        - brain.kushan23.com
      tls:
        httpsRedirect: false
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - draw.kushan23.com
        - brain.kushan23.com
      tls:
        mode: SIMPLE
        credentialName: draw-kushan23-cert-tls
